--- a/essay#2.Rmd
+++ b/essay#2.Rmd
@@ -6,23 +6,5 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## What was the easiest part of the class for you? Explain why
+2. Learning the flow of the class has been the easiest for me, and quite frankly the most enjoyable. I like that I am learning as I am going. Instead of lecturing the class we're esentially lecturing ourselves. I consider myself a visual learner and the preperations have given me the ability to work out problems on my own ( with google of coruse :) ). 
