--- a/essay#4.Rmd
+++ b/essay#4.Rmd
@@ -7,22 +7,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Give one piece of advice to a student just beginning a semester of STA 418/518
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+ GO TO CLASS - that is the biggest advice I can give to anyone. Even if you think you have mastered the material, GO TO CLASS. My freshamn year of undergrad I didnt go to class much, because I knew most of the material. However, I was never able to have my questions answered when they came into mind. Learning the materials in a class setting is so much better. Also come in with an attitude that you are learning this to better yourself as a professional. I get it some Gen-Ed coruses that are necessary to graduate are boring and material is dry. But if you're in this class chances are you want to do something with Data. Show up, Pay attention, ask questions, and do your work. Simple as that! Also make sure you ask questions and find someone else in the class to work with. We all have different coding capabilites and come from different majors. You will find someone who can assist when you're stuck. Valerie has been so helpful and is so knowledeable when it comes to plotting data. I struggled with that as I have not had any SAAS classses or really any other statistical graphing classes. This is a great class to expand your knowledge of a powerful tool!
