finished essay 2 and 3

--- a/essay#2.Rmd
+++ b/essay#2.Rmd
@@ -7,4 +7,4 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 ## What was the easiest part of the class for you? Explain why
-2. Learning the flow of the class has been the easiest for me, and quite frankly the most enjoyable. I like that I am learning as I am going. Instead of lecturing the class we're esentially lecturing ourselves. I consider myself a visual learner and the preperations have given me the ability to work out problems on my own ( with google of coruse :) ). 
+2. Learning the flow of the class has been the easiest for me, and quite frankly the most enjoyable. I like that I am learning as I am going. Instead of lecturing the class we're esentially lecturing ourselves. I consider myself a visual learner and the preperations have given me the ability to work out problems on my own ( with google of coruse :) ). I honestly don't know what else to say. As this class in general is neither hard nor easy. Its enjoyable. I honestly enjoyed learning about R capabilities. This is a great class to lay the foundation of knowledge and a great spot to begin working in a powerful tool. Although, I do wish I took this as an in person class. I do believe asking questions directly to professer Bradford was a bit challenging. However, he did make himself available multiple times a day, during lecture I wish I were able to directly bring my code to him. And I do believe I learn better in a calss setting, Its just who I am as a student. Also learning GitHub and the process took a while to lock down. I finally have it figured out, but maybe a little more lecture time on making sure all students know how to do it. As this is a big part of the class since all course work is done and loaded through it. I wasnt able to load half of my class work because I was 'behind' in pushes / commits.
