finished growth essay

--- a/growth.Rmd
+++ b/growth.Rmd
@@ -10,3 +10,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Growth as a person in data
 
 Growth as a Data Person: I believe once finished with STA 518 my ability to create tools for visualization will have immensly increased. This is my first course with R and I am thourghouly enjoying every minute. I have mostly work in Python for coding so I like how coding in R is done. I have taken a Java class before and was completely lost to say the least. I beleive this course will help me grow in my professional life as well. We are about half way through the course now, I am excited to work on this project solo and the group project. Once those are complete I believe my ability to tell stories with data will be a great tool to bring to my future employers! I do feel I have a good grasp on most of, if not all the libraries we covered in class such as: ggplot, diplyr, tidyverse, rmarkdown, distill. Which I believe are crucial for creating statiscal analysis. As I have said, this is my first real high level stats course. I came in not knowing much but I do believe if it came down to it, I could import data, clean it and graph it in numerous ways in R. I am not sure how widespread R is in the field of work I would like to go into. But as I said, I do believe I can confidentally tell my employer I am comfortable using R/R studio. I know what kind of questions will be asked and how to navigate those problems. I am not sure how exporting works that great. But I am sure i could figure it out. I am actually looking forward to my next stats course in the data analytics prorgram as I now feel I have the 1st and 2nd layer of knowledge to create statistical analysis!
+I am not sure how in my role at a company will implement my new abilities in R. To be quite honest I am not really sure which type of jobs in the data world require R. Maybe a data analyst for graphs in quarterly meetings? But what I want to do in my career is either data engineering or data scientist. I love working in Python, nothing against R of course. However, I feel the most comfortable in python as most classes ive been in are around python. However, I would 100% take more R classes as this is such a powerful tool. Being able to create graphs from data helps everyone understand. Especially with how things are going in the real world, everthing is visual. Even for me, I consider myself a visual learner.  I know this is supposed to be an essay on how this class will help me grow, but I would almost rather have a conversation. Talk about things like what can I do in the real world with R? What jobs require R? What are the things I would need to learn in order to become a proficient R user and make a difference in my job? 
+
+The clear and obvious is I have learned everthing I know about R in this class. I have not had anything in the past learning this tool. However, I do feel comfortable cleaning data in R and graphing it. Is that something I could use as a data engineer or scientist? I am not sure, but it is definately something I can tell my future employer!
+
+All in all great experience and class. I enjoyed it thourghly, I am not sure if any of my other stats classes in this masters program will use R, but now I kind of hope so!
