finished 3 parts of the grade rmd

--- a/grade.Rmd
+++ b/grade.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # How Did You Demonstrate That Grade? 
 So for our grades, the course objectives is what we are to base our argument on. The reason I believe I earned an A- in this class would be based on the following:
 
-Import, manage, and clean data: This one is pretty straight forward as i was able to import the results.csv. In the load phase I did get rid of all NA although I did not believe there were to be any, but this is one thing i like to make sure I do before any analysis is started. Also in my graph code chunks I use groupby, filter and summarise to manage data and extract the data I need. I do believe my understanding of this course objective is very good. This section came natural to me and I was able to learn rather quickly. I think I aced this part of the course objectives. I was not caught up by anything and learned the rules and parameters of functions very easily!
+Import, manage, and clean data: This one is pretty straight forward as i was able to import the results.csv. In the load phase I did get rid of all NA although I did not believe there were to be any, but this is one thing i like to make sure I do before any analysis is started. Also in my graph code chunks I use groupby, filter and summarise to manage data and extract the data I need. I do believe my understanding of this course objective is very good. This section came natural to me and I was able to learn rather quickly. I think I aced this part of the course objectives. I was not caught up by anything and learned the rules and parameters of functions very easily! (few examples below!)
 ## Load Data
 
 ```{r echo = FALSE}
@@ -37,10 +37,34 @@ str(results)
 
 summary(results)
 ```
+```{r echo = FALSE, fig.align = 'default', warning = FALSE, fig.width=30, fig.height=30, fig.cap="Results by Season"}
 
+results %>%
+  group_by(result, season) %>%
+  count() %>%
+```
+```
+tot_home_goals = results %>%
+  group_by(season) %>%
+  summarise(total_home_goals = sum(home_goals)) %>%
+```
 Create graphical displays and numerical summaries of data for exploratory analysis and presentations.
+This was one of the coolest thing I think I will take away from this class. I am assuming there are A TON of different ways to display data, however, ggplot was awesome to explore. There are so many cool things you can do to make data easy to read. As I stated earlier, people are visual. And I do believe that if I was tasked with graphing data, I would be able to make really easy to read graphs with GG plot. I believe I was able to create graphs that are not 'easy to make' as I was able to change dimensions, sizing, fills, text size, colors, landscape. I was able to get pretty detailed and dove pretty deep into being able to change graphs to what I thought looked best. I do believe atleast for ggplot I aced this objective in the course. Here are a few examples of graphs I was able to create in my project! I do believe that I could have gone further with graphing. However, for my first R class I do believe I was able to demonstrate my ability of graphing in the project. However, for my last graph I wasnt able to figure out the best way to finish it. I think I got carried away with trying to make things look cooler rather than graphing the data in a readable way. I wanted to show the difference of home and away wins between Manchester United and Manchester City. But I think my googling got a bit out of hand. Unfortunately had to turn in the project this evening and I wasnt able to finish. However, I will go back and finish as I want to create a distill page for this to show my Manchester United fans just how bads its been for the past years for their club lol!
 
-Write R programs for simulations from probability models and randomization-based experiments: Welp, here we are.. the course objective that I was not able to complete. To be quite honest I have no idea how to do this or even where to start. This is the reason why I believe I did not earn a full A or A+ . I wish I was able to say on my reflection that I earned the full A, but I have no idea where to start with this or anything along those lines. Im hoping you understand that I just do not know how to do it. I could have tried, but like I said I dint even know where to start. 
+This is probably the coolest graph I made. I was able to create two seperate graphs one for home wins and one for away wins. After that I merged the two and created a master. Total wins both home and away from 2006-2018. This probably took me like 3 hours to figure out and it finnaly compiled for me and I dont think I have ever been so happy.
+```
+ggplot(overall_wins, aes(x=reorder(factor(Team), wins), y=wins, fill = wins)) + 
+  geom_bar(stat = "identity", position = "dodge") + 
+  xlab("Team") + 
+  ylab("Wins") + 
+  theme(legend.position ='none',axis.title.y = element_text(size=50), axis.text.y = element_text(size = 25), axis.title.x = element_text(size=50),axis.text.x = element_text(angle = 90, size = 25), plot.title = element_text(size=50, hjust = 0.5)) +
+  scale_fill_gradientn(name = '',colours = rev(brewer.pal(10,'Spectral'))) +
+  geom_text(aes(label = wins), hjust = -0.3, size = 10.5) +
+  ggtitle("Number of Overall wins in the English Premier League from 2006/07 to 2017/18") +
+  coord_flip()
+```
+
+Write R programs for simulations from probability models and randomization-based experiments: Welp, here we are.. the course objective that I was not able to complete. To be quite honest I have no idea how to do this or even where to start. This is the reason why I believe I did not earn a full A or A+ . I wish I was able to say on my reflection that I earned the full A, but I have no idea where to start with this or anything along those lines. Im hoping you understand that I just do not know how to do it. I could have tried, but like I said I didnt even know where to start. 
 
 Use source documentation and other resources to troubleshoot and extend R programs.
 
