grade reflection finished

--- a/grade.Rmd
+++ b/grade.Rmd
@@ -71,3 +71,5 @@ Write clear, efficient, and well-documented R programs.
 
 I do believe that my code is effiecient or as effiecient as it can be.. and it is readable. So I believe that this part of the course objective was completed. Sometimes I feel like I am writting too much / taking too many steps to get to where I want to be. But sometimes it helps me work things out and get to the final code correctly. When I jump corners thats when I start to run into errors. However, I do feel my code is easy to follow and easy to read!
 
+Anything else?: 
+Well to be completely honest I believe I did my best to learn the material at a high level. Obviously some things are harder to grasp than others, but I feel like I put my best foot forward in this class to make something that I can relate to. I will be able to create more analysis with this type of format now that I know what to do. I believe as an aspiring data employee I have learned about some things I may have never looked into before. This will only help me continue to grow and be an important employee for my future employer. I am very greatful for this class set up as I believe it allowed me to create my own type of project and show who I am. I do work hard in school, but its always nice to have those classes that you dont have to stress about (too much atleast.) I feel I do learn better with a structured lecture, but this was eye opening as it allows students to depict their actions and not have streamlined outcomes!
